k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: BACKEND_CORS_ORIGINS
              value: '["http://localhost:3000", "http://localhost:5000", "https://rentally.rasztabiga.me"]'
            - name: FIRST_SUPERUSER
              value: admin@rentally.com
            - name: FIRST_SUPERUSER_PASSWORD
              value: 5d87bf6ee052598c
            - name: POSTGRES_SERVER
              value: db:5432
            - name: SECRET_KEY
              value: ca9c1d4509ec6c9b9550fecfab3817a9b87e5e06bcbfe94298b12ce14ca8e428
          image: navareth/rentally-backend:latest
          name: backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
