k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: webapp
    spec:
      containers:
        - env:
            - name: REACT_APP_API_URL
              value: https://rentally.rasztabiga.me/api/v1
          image: navareth/rentally-webapp:latest
          name: webapp
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
