k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thingoo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: rentally.rasztabiga.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 3000
